tests/correctness/diff_width_test.expect
---CODE---
1
---STDERR---
Stage 'verilog' had a non-zero exit code.
---------------- stderr ----------------
%Error: /var/folders/6q/t70wp1n54pd1dlp4q9m58ft00000gn/T/tmpcxgkypjs:1:1: syntax error, unexpected IDENTIFIER
    1 | _1_1.out -> [cond0.done]
      | ^~~~
%Error: Exiting due to 1 error(s)

